2003-12-02  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkMenu.c (MenuVarProc): prevent this from triggering
	while interp is being destroyed.

2003-11-25  Anton Kovalenko <a_kovalenko@users.sourceforge.net>

	* generic/tkPointer.c (Tk_UpdatePointer): corrected targetWinPtr
	check (line 369) so any pointer event with winPtr==0
	is really redirected to the grab or restrict window (if any).

2003-11-21  Vince Darley <vincentdarley@users.sourceforge.net>

	* generic/tkTextDisp.c: 
	* generic/tkText.h: 
	* generic/tkText.c: 
	* tests/textDisp.test: ensure interpolated tabs are at the same
	location as the equivalent real tabs, by making use of fractional
	rather than integer pixel calculations.
	
2003-11-21  Vince Darley <vincentdarley@users.sourceforge.net>

	* generic/tkTextDisp.c: prevent wrapped line height calculations 
	until the widget has actually been given a geometry.
	
	* tests/textWind.test: 
	* tests/textDisp.test: fix to [Bug 843752], allowing tests to
	complete cross-platform.  Thanks to dgp for extensive testing.
	
2003-11-21  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/FindPhoto.3: Removed reference to long-gone header file.

2003-11-20  Vince Darley <vincentdarley@users.sourceforge.net>

	* win/tkWinSend.c:
	* win/tkWinSendCom.c: ensure object is not shared before lappend
	(fix for crash in Windows test suite), and clean up of files to 
	bring them closer to Tcl standards.
	
2003-11-20  Benjamin Riefenstahl  <Benjamin.Riefenstahl@epost.de>

	* macosx/tkMacOSXKeyboard.c: Add PowerBook keycode 0x34 as <Return>.

2003-11-18  Jim Ingham  <jingham@apple.com>

        * macosx/tkMacOSXScrlbr.c: Reworking Vince's fix to [Bug 842952].  This
        version is clearer, and works helps keep the mouse better pinned to the
        scrollbar.  I also removed the glitch where the scrollbar would jump get
        its middle over the mouse when you first moved it.
         
2003-11-17  Don Porter	<dgp@users.sourceforge.net>
